# DomainBasedNewsSummarization

domain_based_news_summarization-main/: .gitattributes  .gitignore  ADVANCED_FEATURES.md  AUTHENTICATION_COMPLETE.md  CORE_FUNCTIONALITIES.md  DOCKER_REFERENCE.md  FIXES_SUMMARY.md  PROGRESS_README.md  README.md  diagnostics_gemini.py  persistence_test.txt  results.txt  start-dev.ps1  stop-dev.ps1  test-advanced-features.ps1  test-complete-system.ps1  test_api.py  test_auth.ps1  test_gemma_lora.py  test_results.txt  zip_project_no_deps.py
domain_based_news_summarization-main/backend/: database.py  diag_digest_engines.py  diag_digest_engines_correct.py  diag_report.py  main.py  pyproject.toml  run_digest_test.py  run_digest_test_simple.py  seed_articles_mongo.py  test_connections.py  test_db_first_topup.py  test_fetch_script.py
domain_based_news_summarization-main/frontend/: package.json  pnpm-lock.yaml
domain_based_news_summarization-main/frontend/app/: globals.css  layout.tsx  page.tsx
domain_based_news_summarization-main/frontend/app/(auth)/login/: page.tsx
domain_based_news_summarization-main/frontend/app/(dashboard)/: layout.tsx
domain_based_news_summarization-main/frontend/components/: custom-domain-manager.tsx  theme-toggle.tsx  trend-card.tsx
domain_based_news_summarization-main/frontend/lib/: auth-utils.ts  mock-data.ts  types.ts
domain_based_news_summarization-main/frontend/scripts/: custom-domain-delete-check.mjs  dashboard-verification.mjs  domain-switch-check.mjs  saved-trends-e2e.mjs  saved-trends-ui-check.mjs
(+19 files in other folders)
