[project]
name = "whatsnew-backend"
version = "1.0.0"
description = "What's New? - Domain Intelligence Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.0",
    "pymongo>=4.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.4",
    "nltk>=3.9.1",
    "scikit-learn>=1.5.1",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "sentencepiece>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
